installed Sass compilier

--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "A vanilla JS app to find road trip destinations",
   "main": "js/main.js",
   "scripts": {
-    "start": "live-server --port=8080",
+    "start": "npm run build:css && live-server --port=8080",
+    "dev": "npm run watch:css & live-server --port=8080",
     "lint": "eslint js/**/*.js",
     "format": "prettier --write js/**/*.js scss/**/*.scss *.html",
+    "build:css": "sass scss/main.scss css/main.css",
+    "watch:css": "sass --watch scss/main.scss:css/main.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -22,6 +25,7 @@
     "eslint-config-prettier": "^10.1.1",
     "globals": "^16.0.0",
     "live-server": "^1.2.0",
-    "prettier": "^3.5.3"
+    "prettier": "^3.5.3",
+    "sass": "^1.85.1"
   }
 }
