--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,4 @@ jobs:
           port: ${{ secrets.SG_PORT }}
           source: "index.html,css/main.css,css/main.min.css,js/main.js,js/main.min.js"
           target: "www/findthinger.lantrev.com/public_html"
-          script: |
-            cd www/findthinger.lantrev.com/public_html
-            git fetch origin main
-            git reset --hard origin/main
-            echo "Files deployed successfully"
+          overwrite: true
